[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_library"
version = "1.0.0"
description = "This library is designed for storing, preprocessing, and analyzing user event data."
readme = "README.md" 
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Razuev George", email = "razuevg174@mail.ru" } 
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]

dependencies = [
    "colorama>=0.4.6",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "fonttools>=4.57.0",
    "iniconfig>=2.0.0",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.1",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=5.24.1",
    "pluggy>=1.5.0",
    "pyparsing>=3.2.3",
    "pytest>=8.3.4",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "tenacity>=9.0.0",
    "threadpoolctl>=3.6.0",
    "tzdata>=2024.2",
]

